--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,16 @@ code {
 * {
     box-sizing: border-box;
 }
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.rotation {
+    animation: rotation 500ms ease-in 0s infinite;
+}
