--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(./styles/animations.css);
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -17,15 +19,4 @@ code {
     box-sizing: border-box;
 }
 
-@keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
 
-.rotation {
-    animation: rotation 500ms ease-in 0s infinite;
-}
