--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,18 @@ code {
 }
 
 .container {
+    width: 100%;
     padding-left: 24px;
     padding-right: 24px;
 }
 
+@media (min-width: 660px) {
+    .container {
+        padding-left: 54px;
+        padding-right: 54px;
+        max-width: 1212px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
