--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,16 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    height: 100%;
 }
 
 main {
     height: 100%;
+}
+@media (max-width: 660px) {
+    html, #root {
+        height: 100%;
+    }
 }
 
 code {
@@ -41,4 +47,10 @@ code {
     .hidden-mobile {
         display: none !important;
     }
+}
+
+button,
+input,
+textarea {
+    font-family: inherit;
 }
